--- a/pocheLib.css
+++ b/pocheLib.css
@@ -24,6 +24,12 @@ h2 {
   margin-top: 25px;
 }
 
+.errorMessage {
+  font-size: 10px;
+  color: red;
+  text-align: center;
+}
+
 .results {
   text-align: center;
 }
@@ -46,11 +52,19 @@ h2 {
   z-index: 1;
 }
 
+.bookmark:hover {
+  cursor: pointer;
+}
+
 .trash {
   position: absolute;
   top: 5px;
   left: 0;
   z-index: 1;
+}
+
+.trash:hover {
+  cursor: pointer;
 }
 
 .card-body {
@@ -63,6 +77,11 @@ h2 {
   -webkit-line-clamp: 2;
   overflow: hidden;
   font-size: 15px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 100%;
 }
 
 .auteur {
