--- a/public/design.scss
+++ b/public/design.scss
@@ -24,6 +24,15 @@ $font-size-content: 10px;
   }
 }
 
+@mixin alert ($color) {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: center;
+  border-top: 1px ridge $color;
+  border-bottom: 1px ridge $color;
+  color: $color;
+}
+
 /* For mobile phones: */
 [class*="col-"] {
   width: 100%;
@@ -75,12 +84,16 @@ h2 {
 .form-group {
   margin-top: 25px;
   margin-bottom: 25px;
-}
 
-.form-control {
-  width: 80%;
-  margin-right: 15px;
-  margin-left: 15px;
+  .form-label {
+    display: block;
+  }
+
+  .form-control {
+    width: 80%;
+    margin-right: 15px;
+    margin-left: 15px;
+  }
 }
 
 .errorMessage {
@@ -143,6 +156,14 @@ h2 {
   text-align: justify;
 }
 
+.alert-success {
+  @include alert($primary-color);
+}
+
+.alert-danger {
+  @include alert($error-color);
+}
+
 @media only screen and (min-width: 600px) {
   /* For tablets: */
   .col-s-1 {width: 8.33%;}
@@ -157,6 +178,7 @@ h2 {
   .col-s-10 {width: 83.33%;}
   .col-s-11 {width: 91.66%;}
   .col-s-12 {width: 100%;}
+
 
   .card-content {
     display: flex;
